--- a/Assets/style.css
+++ b/Assets/style.css
@@ -2,20 +2,19 @@ body {
     font-family: Arial, sans-serif;
 }
 
+img {
+    border-radius: 50%;
+    text-align: center;
+    width: 150px;
+    height: 150px;
+    pointer-events: none;
+    margin: 20px 20px;
+    z-index: 100;
+}
+
 #header {
     text-align: center;
     margin-bottom: 20px;
-}
-
-#score {
-    font-size: 24px;
-    font-weight: bold;
-    margin-right: 20px;
-}
-
-#start {
-    cursor: pointer;
-    font-size: 18px;
 }
 
 #game-board {
@@ -25,25 +24,6 @@ body {
     width: 920px;
     margin: 0 auto;
 }
-
-.block {
-    border: 2px brown solid ;
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-    margin: 2px 0px;
-    background-color: #ddd;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: visible;
-}
-
-.block img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-  }
 
 .timer {
     position: absolute;
@@ -55,10 +35,16 @@ body {
     display: blcok;
 }
 
-#time-left {
-    position: relative;
+.row {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+}
+
+.block {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    text-align: center;
+    color: white;
+    background-color: white;
+    border: 2px solid brown;
 }
